@@ -58,7 +58,8 @@ enum { CARTRIDGE_UNKNOWN        = -1,
        CARTRIDGE_TURBOSOFT_64   = 50,
        CARTRIDGE_TURBOSOFT_128  = 51,
        CARTRIDGE_ULTRACART_32   = 52,
-       CARTRIDGE_LAST_SUPPORTED = 52
+       CARTRIDGE_LOW_BANK_8     = 53,
+       CARTRIDGE_LAST_SUPPORTED = 53
 };
 
 #define CARTRIDGE_MAX_SIZE	(1024 * 1024)
